# sample-aws-strands-nova-voice-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  run_backend.sh  setup_iam.sh
.kiro/specs/bidi-agent-refactor/: .config.kiro  design.md  requirements.md  tasks.md
backend/src/voice_based_aws_agent/: __init__.py  main.py
backend/src/voice_based_aws_agent/agents/: __init__.py  backup_agent.py  ec2_agent.py  orchestrator.py  ssm_agent.py  supervisor_agent.py
backend/src/voice_based_aws_agent/config/: config.py  conversation_config.py
backend/src/voice_based_aws_agent/utils/: prompt_consent.py
backend/src/voice_based_aws_agent/utils/voice_integration/: __init__.py  bidi_channels.py  s2s_events.py  s2s_session_manager.py  server.py  supervisor_agent_integration.py
backend/tools/: supervisor_tool.py
frontend/src/: VoiceAgent.js
frontend/src/helper/: BidiEventHelpers.js  BidiEventHelpers.test.js  s2sEvents.js
